# agentic-store-mcp

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  server.py  setup_local.py  webapp.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-publish.yml
agentic_store_mcp/: __init__.py  connectors.py  memory_store.py  secrets.py  server.py
agentic_store_mcp/firewall/: audit.py  ca_manager.py  proxy.py  recorder.py  rules.py  system_proxy.py  tls_proxy.py
agentic_store_mcp/firewall/sanitizers/: deterministic.py  llm_reviewer.py
agentic_store_mcp/modules/code/: MODULE.md
agentic_store_mcp/modules/code/codebase_analysis/analyze_commits/: handler.py  schema.json  test_handler.py
agentic_store_mcp/modules/code/codebase_analysis/get_file/: handler.py  schema.json  test_handler.py
agentic_store_mcp/modules/code/codebase_analysis/python_lint_checker/: schema.json
agentic_store_mcp/modules/code/codebase_analysis/search_code/: handler.py  schema.json  test_handler.py
agentic_store_mcp/modules/code/dependency_audit/: schema.json
agentic_store_mcp/modules/code/python_lint_checker/: README.md  handler.py  schema.json  test_handler.py
agentic_store_mcp/modules/code/remote_integrations/create_pr/: handler.py  schema.json  test_handler.py
agentic_store_mcp/modules/code/remote_integrations/get_repo_info/: handler.py  schema.json  test_handler.py
agentic_store_mcp/modules/code/remote_integrations/manage_issue/: handler.py  schema.json  test_handler.py
agentic_store_mcp/modules/code/repo_scanner/: schema.json
agentic_store_mcp/modules/code/security/code_scanning_alerts/: handler.py  schema.json  test_handler.py
agentic_store_mcp/modules/code/security/dependabot_alerts/: handler.py  schema.json  test_handler.py
agentic_store_mcp/modules/code/security/dependency_audit/: README.md  handler.py  schema.json  test_handler.py
agentic_store_mcp/modules/code/security/repo_scanner/: README.md  handler.py  schema.json  test_handler.py
agentic_store_mcp/modules/data/: MODULE.md
agentic_store_mcp/modules/data/agentic_web_crawl/: README.md  handler.py  schema.json  test_handler.py
agentic_store_mcp/modules/data/agentic_web_search/: README.md  handler.py  schema.json  test_handler.py
agentic_store_mcp/modules/tools/: MODULE.md
agentic_store_mcp/modules/tools/configure/: handler.py  schema.json  test_handler.py
agentic_store_mcp/modules/tools/list_processes/: handler.py  schema.json  test_list_processes.py
agentic_store_mcp/modules/tools/tail_system_logs/: handler.py  schema.json  test_tail_system_logs.py
agentic_store_mcp/modules/tools/tool_search/: handler.py  schema.json  test_handler.py
agentic_store_mcp/webapp/: __init__.py  app.py  clients.py  config_writer.py  discovery.py  run.py
agentic_store_mcp/webapp/static/: app.js  style.css
agentic_store_mcp/webapp/templates/: base.html  index.html
docs/setup/: docker.md
