[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-store-mcp"
version = "1.0"
description = "Model Context Protocol (MCP) Server for AI Data Privacy: LLM prompt firewall, audit logs, and 27 tools for Claude, Cursor, and Windsurf."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = [
    "mcp", "mcp-server", "model context protocol", "llm security", "prompt firewall",
    "ai data privacy", "data loss prevention", "dlp", "prompt sanitization",
    "prompt recording", "audit traces", "autonomous agents", "ai coding assistants",
    "claude", "cursor", "windsurf", "agentic workflows", "devsecops"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0",
    "keyring>=25.0",
    "PyGithub>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "httpx>=0.27",
    "mitmproxy>=12.2.1",
]

[project.scripts]
agentic-store-mcp = "agentic_store_mcp.server:main"
agentic-store-webapp = "agentic_store_mcp.webapp.run:main"

[project.urls]
Homepage = "https://www.agenticstore.dev/docs"
Issues   = "https://github.com/agenticstore/agentic-store-mcp/issues"
Repository = "https://github.com/agenticstore/agentic-store-mcp"


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build]
exclude = [
  "*.pyc",
  "**/__pycache__",
  "**/.venv",
  "**/venv",
  "**/testing",
  "**/.pytest_cache",
  "**/.mypy_cache",
  "**/.ruff_cache",
  "**/node_modules",
  "dist",
  "build",
  "memory",
  "skills",
  ".env",
]

[tool.hatch.build.targets.wheel]
packages = ["agentic_store_mcp"]

[tool.hatch.build.targets.sdist]
include = [
  "agentic_store_mcp/",
  "server.py",
  "webapp.py",
  "setup_local.py",
  "README.md",
  "pyproject.toml",
  ".env.example",
]

[tool.pytest.ini_options]
testpaths = ["agentic_store_mcp/modules"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
